Restore CSS styling to issue metadata
Commit 4981a1e went a little too far, removing some
CSS that was used to style issue metadata.

--- a/app/views/sass/issues.sass
+++ b/app/views/sass/issues.sass
@@ -1,3 +1,13 @@
+.issue
+  th
+    padding: 1em
+    vertical-align: top
+    background: white
+  th + td
+    padding-top: -0.5em
+    border-bottom: 1px solid #ccc
+    width: 85%
+
 .issue.private
   h1
     background: url(../images/lock.png) no-repeat right center
